<resources>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="a">a...</string>
    <string name="bienvenid">Bienvenid@</string>
    <string name="agregar_usuario">AGREGAR USUARIO</string>
    <string name="terminado">Terminado</string>
    <string name="titulo_tarea">Tarea</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nuevo_ticket">Nuevo ticket</string>
    <string name="perfil">Perfil</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tickets">Tickets</string>
    <string name="lista_de_usuarios">Lista de usuarios</string>
    <string name="ticket">Ticket</string>
    <string name="eventos">Eventos</string>
    <string name="elementos">Elementos</string>
    <string name="cargando">Cargando...</string>
    <string name="titulo">Titulo</string>
    <string name="modificar_contrase_a">Modificar contraseña</string>
    <string name="a_adir_software">Añadir software</string>
    <string name="a_adir_ticket">Añadir ticket</string>
    <string name="descripci_n">Descripción</string>
    <string name="estado_del_ticket">Estado del ticket</string>
    <string name="objeto_del_ticket">Objeto del ticket</string>
    <string name="enviar">Enviar</string>
    <string name="s_n">S/N</string>
    <string name="nombre">Nombre</string>
    <string name="brand">Brand</string>
    <string name="modelo">Modelo</string>
    <string name="developer">Developer</string>
    <string name="versi_n">Versión</string>
    <string name="a_adir_hardware">Añadir hardware</string>
    <string name="estado">Estado</string>
    <string name="due_o">Dueño</string>
    <string name="objeto">Objeto</string>
    <string name="desconectar">Desconectar</string>
    <string name="a_adir_t_cnico">Añadir técnico</string>
    <string name="desasignar_t_cnico">Desasignar técnico</string>
    <string name="ver_t_cnicos_asociados">Ver técnicos asociados</string>
    <string name="enviar_nuevo_evento">Enviar nuevo evento</string>
    <string name="enviar_nueva_tarea">Enviar nueva tarea</string>
    <string name="marcar_si_es_una_tarea_a_realizar">Marcar si es una tarea a realizar</string>
    <string name="a_adir_evento">Añadir evento</string>
    <string-array name="types_events">
        <item>Seguimiento</item>
        <item>Solución</item>
        <item>Cerrado</item>
    </string-array>
    <string-array name="estado_ticket">
        <item>Abierto</item>
        <item>Asignado</item>
        <item>En espera</item>
        <item>Solucionado</item>
        <item>Cerrado</item>
    </string-array>
    <string-array name="user_types">
        <item>Cliente</item>
        <item>Técnico</item>
        <item>Supervisor</item>
        <item>Administrador</item>
    </string-array>
    <string name="title_activity_modificar__evento">Modificar_Evento</string>
    <string name="modificar_evento">Modificar evento</string>
    <string name="modificar_ticket">Modificar ticket</string>
    <string name="primer_apellido">Primer apellido</string>
    <string name="email">Email</string>
    <string name="crear_nuevo_usuario">Crear nuevo usuario</string>
    <string name="nombre_de_su_usuario">Nombre de su usuario</string>
    <string name="crear_usuario">Crear usuario</string>


</resources>
