<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".adds.NewSoftware">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/nombre_software"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:drawablePadding="8dp"
                android:textColorHint="@android:color/white">

                <requestFocus/>
            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:textAlignment="center"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/developer"
                android:drawablePadding="8dp"
                android:textColorHint="@android:color/white"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:textAlignment="center"
            >
            <android.support.design.widget.TextInputEditText
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/versi_n"
            android:drawablePadding="8dp"
            android:textColorHint="@android:color/white"
            />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/botonsoftware"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:drawablePadding="-50dp"
            android:background="@drawable/boton_prueba"
            android:drawableStart="@drawable/agenda"
            android:text="@string/enviar"
            android:onClick="new_Software"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>